[project]
name = "nsf-osdf-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "elasticsearch>=9.2.1",
    "folium>=0.20.0",
    "plotly>=6.5.1",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
]
